Icon size fixed to 64 px, no overflowing text.

--- a/client/src/Components/Playlist/Playlist.css
+++ b/client/src/Components/Playlist/Playlist.css
@@ -4,10 +4,18 @@
 }
 
 .playlist-icon {
-    max-width: 64px;
+    width: 64px;
+    height: 64px;
     object-fit: cover;
 }
 
 .playlist-wrapper {
     margin: 4px;
+}
+
+.playlist-name {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden; 
+    width: 150px;
 }
